--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
         </a> -->
 
-        <img src="/img/logo_shop.jpg" class="logo">
+        <img src="logo_shop.jpg" class="logo">
         <!-- <h4> <a href="#">let do shopping 🛍️</a></h4> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
                         <button>shop now</button>
                 </div>
                 <div class="col-lg-6 col-sm-12  ">
-                    <img src="/img/device.jpg" alt="" class="dev">
+                    <img src="device.jpg" alt="" class="dev">
                 </div>
             </div>
         </div>
