--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <body>
 
 
-    <nav class="navbar fixed navbar-expand-lg  navbar-light bg-light py-2">
+    <nav class="navbar  navbar-expand-lg fixed-top  navbar-light bg-light py-2">
         <!-- <a class="navbar-brand" href="#">
             
         </a> -->
 
-        <img src="logo_shop.jpg" class="logo">
+        <img src="/img/logo_shop.jpg" class="logo">
         <!-- <h4> <a href="#">let do shopping 🛍️</a></h4> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-lg-6 col-sm-12 data">
                     <h5>new arraival</h5>
                     <h1><span>best price </span>  this year</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptas fugiat cupiditate earum,
@@ -81,7 +81,7 @@
                         <button>shop now</button>
                 </div>
                 <div class="col-lg-6 col-sm-12  ">
-                    <img src="device.jpg" alt="" class="dev">
+                    <img src="/img/device.jpg" alt="" class="dev">
                 </div>
             </div>
         </div>
