--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <button class="shop"> shop now</button>
                 </div>
                 <div class="col-lg-6 col-sm-12  ">
-                    <img src="/img/device.jpg" alt="" class="dev">
+                    <img src="./img/device.jpg" alt="" class="dev">
                 </div>
             </div>
         </div>
@@ -98,9 +98,9 @@
     <section id="brand">
         <div class="container">
             <div class="row">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
                 <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
                 <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
                 <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
