--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
                 <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
                 <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
-                <img src="/img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
+                <img src="./img/sam.png" class="img-fluid col-lg-2 col-md-4 col-6 eee" alt="">
 
             </div>
 
@@ -138,7 +138,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/tv.png" class="img-fluid" alt="">
+                            <img src="./img/tv.png" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -159,7 +159,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center">
-                            <img src="/img/mobile.jpg" class="img-fluid" alt="">
+                            <img src="./img/mobile.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -181,7 +181,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/ac.jpg" class="img-fluid" alt="">
+                            <img src="./img/ac.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -204,7 +204,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/all.jpg" class="img-fluid" alt="">
+                            <img src="./img/all.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -255,7 +255,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/tv.png" class="img-fluid" alt="">
+                            <img src="./img/tv.png" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -276,7 +276,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center">
-                            <img src="/img/mobile.jpg" class="img-fluid" alt="">
+                            <img src="./img/mobile.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -298,7 +298,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/ac.jpg" class="img-fluid" alt="">
+                            <img src="./img/ac.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -321,7 +321,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/all.jpg" class="img-fluid" alt="">
+                            <img src="./img/all.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -368,7 +368,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/tv.png" class="img-fluid" alt="">
+                            <img src="./img/tv.png" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -389,7 +389,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center">
-                            <img src="/img/mobile.jpg" class="img-fluid" alt="">
+                            <img src="./img/mobile.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -411,7 +411,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/ac.jpg" class="img-fluid" alt="">
+                            <img src="./img/ac.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
@@ -434,7 +434,7 @@
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <div class="product">
                         <div class="pro-img text-center ">
-                            <img src="/img/all.jpg" class="img-fluid" alt="">
+                            <img src="./img/all.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title font-roboto">Lorem ipsum dolor sit amet.</h5>
