--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
         </a> -->
 
-        <img src="/img/logo_shop.jpg" class="logo">
+        <img src="./img/logo_shop.jpg" class="logo">
         <!-- <h4> <a href="#">let do shopping 🛍️</a></h4> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,11 +44,11 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="#new">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#new"> new <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="#naya">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#foot"> contact <span class="sr-only">(current)</span></a>
                 </li>
 
 
@@ -459,7 +459,7 @@
 
 
 
-    <footer>
+    <footer id="foot">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
