--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href=".product"> product <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#ppp"> product <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="col-lg-3 col-sm-12 col-md-6">
-                    <div class="product">
+                    <div class="product" id="ppp>
                         <div class="pro-img text-center ">
                             <img src="./img/all.jpg" class="img-fluid" alt="">
                         </div>
